# serializer version: 1
# name: TestParsing.test_extract_document_version[IFTSTA]
  tuple(
    '',
    None,
    None,
    '',
  )
# ---
# name: TestParsing.test_extract_document_version[REMADV]
  tuple(
    '2.9b',
    2,
    9,
    'b',
  )
# ---
# name: TestParsing.test_extract_document_version[REQOTE]
  tuple(
    '1.3',
    1,
    3,
    '',
  )
# ---
# name: TestParsing.test_extract_document_version[UTILMDG]
  tuple(
    'G1.0a',
    1,
    0,
    'a',
  )
# ---
# name: TestParsing.test_extract_document_version[UTILMDS]
  tuple(
    'S1.1',
    1,
    1,
    '',
  )
# ---
